load("//tests/bazel:codescythe_test.bzl", "codescythe_test")

filegroup(
    name = "fixture_files",
    srcs = glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "README.md",
        ],
    ),
    visibility = ["//visibility:public"],
)

codescythe_test(
    name = "codescythe_runfiles_test",
    args = [
        "--config",
        "$(location codescythe.json)",
        "--json",
    ],
    data = [
        ":fixture_files",
        "codescythe.json",
    ],
    expected_exit_code = 1,
    must_contain = [
        "./missing",
        "\"processed\":6",
        "\"total\":6",
        "protobuf/wrong/client.ts",
        "typespec/schema.ts",
        "workspace/frontend/dead.ts",
    ],
    must_not_contain = [
        "#virtual_generated/api/foo",
    ],
)
